feat: enhance logging in UserController and JwtAuthenticationFilter for better request tracking and error handling